# rescuetime-to-sqlite

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
rescuetime_to_sqlite/: cli.py  client.py  service.py
tests/: conftest.py  fixture-auth.json  fixtures.py  test_cli.py  test_client.py  test_service.py
