[tool.poetry]
name = "rescuetime-to-sqlite"
version = "0.1.0"
description = "Save data from RescueTime to a SQLite database"
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "rescuetime_to_sqlite"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
sqlite-utils = "^3.30"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
responses = "^0.22.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
types-requests = "^2.28.11.7"
ipython = "^8.7.0"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
rescuetime-to-sqlite = "rescuetime_to_sqlite.cli:cli"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
